# stats-cli

./: .bandit  .gitignore  .pre-commit-config.yaml  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OUTLOOK.md  OUTPUT.md  PLAN.md  PLAN_MIDTERM.md  README.md  SECURITY.md  SKILL.md  SKILL_AILY.md  TODO.md  VALIDATION.md  __main__.py  build-skill.sh  commands.md  install-skill.sh  main.py  pyproject.toml  requirements-test.txt  requirements.lock.txt  requirements.txt  serve.py
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  SUMMARY.md  gen_pdf.py  gen_pdf_cn.py  gen_presentation.py  gen_user_guide.py
examples/: anova.json  bayesian.json  capability.json  control_chart.json  correlation.json  descriptive.json  distribution.json  doe.json  equivalence.json  gage_rr.json  multivariate.json  nonparametric.json  normality.json  outlier.json  regression.json  reliability.json  sensitivity.json  trend.json  ttest.json  workflow_example.json
scripts/: package.py  package_aily.py
stats_engine/: __init__.py  acceptance_sampling.py  advanced.py  anova.py  assumptions.py  bayesian.py  capability.py  chart_handlers.py  charts.py  clean.py  control_chart.py  correlation.py  descriptive.py  discover.py  distribution.py  doe.py  equivalence.py  explore.py  functional.py  gage_rr.py  homogeneity.py  mining.py  multiple_comparison.py  multivariate.py  nonparametric.py  normality.py  outlier.py  power.py  regression.py  reliability.py  report.py  sensitivity.py  timeseries.py  transform.py  trend.py  ttest.py  uncertainty.py  workflow.py
test-output/: 01_explore_filling.json  01b_explore_multi_sheet.json  01c_explore_sheet_腺苷 -1.json  01c_explore_sheet_谷胱-1.json  01c_explore_sheet_谷胱.json  02_descriptive_low_weight.json  03_descriptive_high_weight.json  04_descriptive_low_hardness.json  05_descriptive_high_hardness.json  06_normality_low_weight.json  07_normality_high_weight.json  08_normality_low_hardness.json  09_normality_high_hardness.json  10_outlier_low_weight_grubbs.json  11_outlier_high_weight_iqr.json  12_outlier_low_hardness_dixon.json  13_ttest_weight_two_sample.json  14_ttest_hardness_two_sample.json  15_mann_whitney_weight.json  16_homogeneity_weight.json  17_control_chart_imr_low_weight.json  18_control_chart_xbar_low_weight.json  19_capability_low_weight.json  20_capability_high_weight.json  21_trend_low_weight_cusum.json  22_correlation_low.json  23_regression_low.json  24_correlation_high.json  25_clean_low_weight.json  26_transform_low_weight_boxcox.json  27_report_low_weight.json  summary.json
tests/: conftest.py  gen_fixtures.py  nist_data.json  nist_univ_data.json  test_acceptance_sampling.py  test_advanced.py  test_adversarial_fixes.py  test_anova.py  test_bayesian.py  test_benchmark.py  test_benchmark_alt.py  test_bootstrap_cv.py  test_capability.py  test_chart_handlers.py  test_chart_handlers_coverage.py  test_charts.py  test_clean.py  test_control_chart.py  test_correlation.py  test_coverage_boost.py  test_coverage_chart.py  test_coverage_charts.py  test_coverage_extra.py  test_coverage_final.py  test_coverage_handlers.py  test_coverage_more.py  test_coverage_regression_gage.py  test_coverage_workflow.py  test_coverage_workflow_extra.py  test_data_cleaner.py  test_data_loader.py  test_data_loader_coverage.py  test_descriptive.py  test_discover.py  test_distribution.py  test_doe.py  test_edge_cases.py  test_equivalence.py  test_excel_integration.py  test_explore.py  (+41 more)
tests/cross_validation/: reference_values.json  test_concurrency.py  test_cross_validation.py
tests/cross_validation/r_scripts/: generate_reference.R
tests/fixtures/excel/: 001_singlecol_5rows.xlsx  002_singlecol_50rows.xlsx  003_singlecol_500rows.xlsx  004_singlecol_5000rows.xlsx  005_threecol_10rows.xlsx  006_threecol_100rows.xlsx  007_threecol_1000rows.xlsx  008_threecol_5000rows.xlsx  009_5cols_100rows.xlsx  010_10cols_100rows.xlsx  011_20cols_100rows.xlsx  012_50cols_100rows.xlsx  013_large_100rows.xlsx  014_large_500rows.xlsx  015_large_2000rows.xlsx  016_large_10000rows.xlsx  017_wide_3cols.xlsx  018_wide_10cols.xlsx  019_wide_30cols.xlsx  020_wide_100cols.xlsx  021_dist_normal.xlsx  022_dist_uniform.xlsx  023_dist_exponential.xlsx  024_dist_lognormal.xlsx  025_dist_bimodal.xlsx  026_dist_chisquare.xlsx  027_dist_binomial.xlsx  028_dist_poisson.xlsx  029_dist_beta.xlsx  030_dist_gamma.xlsx  031_dist_constant.xlsx  032_dist_near_constant.xlsx  033_dist_integers.xlsx  036_missing_none.xlsx  (+66 more)
utils/: __init__.py  data_cleaner.py  data_loader.py  output.py  validators.py
