[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stats-cli-py"
version = "1.3.0"
description = "Pure Python statistical analysis tool for manufacturing and quality engineering"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "scipy>=1.10,<3",
    "statsmodels>=0.14,<1",
    "pandas>=1.5,<4",
    "numpy>=1.23,<3",
    "openpyxl>=3.0,<4",
    "scikit-learn>=1.0,<2",
    "matplotlib>=3.5,<4",
    "fpdf2>=2.8,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
stats-cli = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["stats_engine*", "utils*"]
exclude = ["tests*", "docs*", "examples*", "test-output*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "UP"]
ignore = ["E501", "SIM105", "SIM102", "SIM108", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["stats_engine", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
